<resources>
    <string name="base_url_live">http://witkeyapp.com/witkey/api/</string>
    <string name="base_url_qa">http://witkeyapp.com/witkey/api/</string>
    <string name="base_url_dev">http://witkeyapp.com/witkey_dev/api/</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">865743260274319</string>
    <string name="fb_login_protocol_scheme">fb865743260274319</string>
    <string name="server_client_id">569647368911-s3no1rsp74bv2oofo215nkchtia594e3.apps.googleusercontent.com</string>
    <string name="app_name">Witkey Live</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_catlog">Catalogues</string>
    <string name="title_ar">Furniture in AR</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_settings">Settings</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="no_results">No Results</string>
    <string name="logout">Logout</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="font">Roboto-Regular.ttf</string>
    <string name="home">Home</string>
    <string name="will_be_implemented_later">This feature will be implemented in beta version.</string>
    <string name="user_sign_in">User Sign In</string>
    <string name="artiste_user_id">Artiste User ID</string>
    <string name="artiste_password">Artiste Password</string>
    <string name="new_registration_sign_up">New Registration Sign Up</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="must_be_at_least_six_characters_long">Must be at least 6 characters long</string>
    <string name="password_length_short">This password is too short</string>
    <string name="must_be_at_least_three_characters_long">Must be at least 3 characters long</string>
    <string name="username_or_phone">Username or Phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="please_enter_valid_email">Please enter a valid email address</string>
    <string name="sign_up">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="username">Username</string>
    <string name="welcome_to_witkey">WELCOME TO WITKEY!</string>
    <string name="welcome_desc">To enjoy optimal user experience of this live streaming platform with out continuous resources, please abide by our terms of use to allow a conducive environment for all broadcasters and users alike to come together for a fun and healthy social interaction. please allow our app to enable the following to ensure a smoother and better user experience. \n\n • Access to photo gallery \n • Enable prompted notifications \n • Enable your location service</string>
    <string name="proceed">Proceed</string>
    <string name="featured">Featured</string>
    <string name="hottest">HOTTEST</string>
    <string name="new_">NEW</string>
    <string name="goddess">Goddess</string>
    <string name="macho">Macho</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="featured_views">150K views</string>
    <string name="featured_hrs">11 hrs ago</string>
    <string name="featured_name">Serene Meow</string>
    <string name="featured_text">Some text here</string>
    <string name="no_featured_result">No Result</string>
    <string name="collect_your_daily_reward">Collect Your Daily Reward</string>
    <string name="collect_rewards">Collect Rewards</string>
    <string name="please_enter_the_broadcaster">Please enter the Broadcaster Name or ID to search</string>
    <string name="please_enter_the_fan">Please enter the Fan Name or ID to search</string>
    <string name="follow">+ FOLLOW</string>
    <string name="follow_">FOLLOW</string>
    <string name="my_fans">MY FANS</string>
    <string name="wallet">WALLET</string>
    <string name="current_chips">CURRENT CHIPS</string>
    <string name="top_spender">Top Spender</string>
    <string name="top_broadcaster">Top Broadcaster</string>
    <string name="top_broadcaster_cap">TOP BROADCASTER</string>
    <string name="top_fan">Top Fan</string>
    <string name="daily_ranking">Daily Ranking</string>
    <string name="weekly_ranking">Weekly Ranking</string>
    <string name="monthly_ranking">Monthly Ranking</string>
    <string name="forget_password">Forget Password?</string>
    <string name="rewards_collected">Rewards Collected!</string>
    <string name="ok">Ok</string>
    <string name="friends">FRIENDS</string>
    <string name="unread">UNREAD</string>
    <string name="your_little_helper">YOUR LITTLE HELPER</string>
    <string name="favorites">FAVORITES</string>
    <string name="no_aciviy_yet">NO ACTIVITY YET</string>
    <string name="admin">ADMIN</string>
    <string name="new_version_update_now_available">NEW VERSION UPDATE NOW AVAILABLE</string>
    <string name="event_update">EVENTS UPDATE</string>
    <string name="eventime">6 DAYS AGO</string>
    <string name="admintime">2 DAYS AGO</string>
    <string name="event_text">GO REGISTER TO PARTICIPATE IN OUR \'GOD OF SONG\' CONTEST NOW</string>
    <string name="how_to_level_up">HOW TO LEVEL UP?</string>
    <string name="broadcaster_rank">BROADCASTER RANK</string>
    <string name="current_broadcaster_rank">CURRENT BROADCASTER RANKING</string>
    <string name="how_to_increase_your_ranking">HOW TO INCREASE YOUR RANKING?</string>
    <string name="no_moments_posted_yet">No moments posted yet!</string>
    <string name="my_moments">MY MOMENTS</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="user_level">USER LEVEL</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="storage_permission_not_granted">Can\'t save image without Storage permission.</string>
    <string name="sex">SEX</string>
    <string name="my_slogan">MY SLOGAN</string>
    <string name="my_birthday">MY BIRTHDAY</string>
    <string name="country">Country</string>
    <string name="profile_setting">PROFILE SETTINGS</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="go_live">GO LIVE</string>
    <string name="go_live_account_summary">ACCOUNT SUMMARY</string>
    <string name="you_live_s_title">YOUR LIVE\'S TITLE</string>
    <string name="tag_your_id"># Tag Your ID</string>
    <string name="gift_out">GIFT OUT</string>
    <string name="witkey_id">WITKEY ID</string>
    <string name="age">AGE</string>
    <string name="level">LEVEL</string>
    <string name="horoscope">HOROSCOPE</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="city">CITY</string>
    <string name="record_audio_permission_not_granted">Record audio permission needed. Please allow in App Settings for additional functionality.</string>
    <string name="connected_account">CONNECTED ACCOUNT</string>
    <string name="phone">PHONE</string>
    <string name="facebook">FACEBOOK</string>
    <string name="google">GOOGLE</string>
    <string name="wechat">WECHAT</string>
    <string name="why_connect_account">Why Connect Account?</string>
    <string name="connect_to_phone_is_highly_recommended">Connect to phone is highly recommended to protect your WITKEY LIVE Account.</string>
    <string name="your_connected_phone_will_be">Your connected phone will be used to receive verification code when account setting changed.</string>
    <string name="once_connected_you_can_easily">Once connected, you can easily log in to WITKEY LIVE with any connected account from anywhere.</string>
    <string name="you_can_set_to_show_your_social">You can set to show your social account to your profile.</string>
    <string name="go_live_user_diamond">194</string>
    <string name="go_live_user_cash">217,198,344</string>
    <string name="system_setting">SYSTEM SETTINGS</string>
    <string name="system_settings">System Settings</string>
    <string name="block_list">BLOCK LIST</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="clear_cache">CLEAR CACHE</string>
    <string name="feedback">FEEDBACK</string>
    <string name="about_us_capital">ABOUT US</string>
    <string name="log_out">Log out</string>
    <string name="wish_to_logout_now">WISH TO LOGOUT NOW?</string>
    <string name="yes">YES</string>
    <string name="later">LATER</string>
    <string name="no_block_list">NO BLOCK LIST</string>
    <string name="unblock">UNBLOCK</string>
    <string name="un_block">Un Block</string>
    <string name="message_notification">MESSAGE NOTIFICATION</string>
    <string name="live_notification">LIVE NOTIFICATION</string>
    <string name="turn_on_to_get_live_notifications">Turn on to get LIVE notifications</string>
    <string name="broadcaster_problem">BROADCASTER PROBLEM</string>
    <string name="nature_of_feedback">NATURE OF FEEDBACK</string>
    <string name="gift_sending_problem">GIFT SENDING PROBLEM</string>
    <string name="unable_to_share">UNABLE TO SHARE</string>
    <string name="stored_value_problem">STORED VALUE PROBLEM</string>
    <string name="unable_to_collect_rewards">UNABLE TO COLLECT REWARDS</string>
    <string name="others">OTHERS</string>
    <string name="type_your_feedback_here">TYPE YOUR FEEDBACK HERE</string>
    <string name="contact_capital">CONTACT</string>
    <string name="leave_your_email_contact">LEAVE YOUR EMAIL CONTACT</string>
    <string name="submit">SUBMIT</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="user_agreement">USER AGREEMENT</string>
    <string name="about_our_company">ABOUT OUR COMPANY</string>
    <string name="community_convention">COMMUNITY CONVENTION</string>
    <string name="storage_permission_desc">External Storage permission needed. Please allow in WitKeyApplication Settings for additional functionality.</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="screen_shot_saved"> Screenshot Saved</string>
    <string name="image_saved"> Image Saved</string>
    <string name="end_broadcast_now">END BROADCAST NOW?</string>
    <string name="ok_capital">OK</string>
    <string name="hourly_ranking">HOURLY RANKING</string>
    <string name="ranking_of_broadcasters_is_based_on_the_amount_of_witkey_dollars_generated_in_the_last_hour">RANKING OF BROADCASTERS IS BASED ON THE AMOUNT OF WITKEY DOLLARS GENERATED IN THE LAST HOUR.</string>
    <string name="the_amount_of_witkey_dollars_is_computed_on_an_hourly_basis">THE AMOUNT OF WITKEY DOLLARS IS COMPUTED ON AN HOURLY BASIS.</string>
    <string name="the_top_10_broadcasters_in_each_hour_will_enjoy_1_hour_limelight_at_the_top_of_the_hottest_home_page">THE TOP 10 BROADCASTERS IN EACH HOUR WILL ENJOY 1 HOUR OF LIMELIGHT AT THE TOP OF THE HOTTEST HOME PAGE.</string>
    <string name="take_new_picture">Take New Picture</string>
    <string name="add_picture_from_gallery">Add Picture From Gallery</string>
    <string name="take_video">Take Video</string>
    <string name="upload_video">Upload Video</string>
    <string name="select_gender">Select Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gift">GIFT</string>
    <string name="use">USE</string>
    <string name="sorry_nothing_in_the_bag">SORRY, NOTHING IN THE BAG</string>
    <string name="tornadoes">TORNADOES</string>
    <string name="badge">BADGE</string>
</resources>