<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@drawable/profile_dropdown_bg"
    android:orientation="vertical"
    android:padding="5dp">

    <app.witkey.live.utils.customviews.CustomTextView
        android:id="@+id/tv_take_photo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="@dimen/x3dp"
        android:text="@string/take_new_picture" />

    <app.witkey.live.utils.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1dp"
        android:background="@color/witkey_orange" />

    <app.witkey.live.utils.customviews.CustomTextView
        android:id="@+id/tv_photo_gallery"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:padding="@dimen/x3dp"
        android:text="@string/add_picture_from_gallery" />

    <app.witkey.live.utils.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:padding="@dimen/x3dp"
        android:text="@string/take_video" />

    <app.witkey.live.utils.customviews.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:padding="@dimen/x3dp"
        android:text="@string/upload_video" />

</LinearLayout>